<resources>
    <string name="app_name">CourseProject</string>
    <string name="showInformation">Посмотреть</string>
    <string name="education_card">Учебная карточка</string>
    <string name="exem">Экзамены</string>
    <string name="admission">Допуски</string>
    <string name="rating">Рейтинг</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="enter_number">Номер студенческого билета</string>
    <string name="number_studak">Номер студенчкеского</string>
    <string name="exit">Выход</string>
    <string name="load">загрузка</string>
    <string name="zach">Зачеты</string>
</resources>
