<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/education_card"
        android:title="@string/education_card"
        android:orderInCategory="1"/>
       <!-- android:icon="@drawable/ic_input_black_24dp"-->
        <!--/>-->

    <item android:id="@+id/mark"
        android:title="@string/exem"
        android:orderInCategory="1"/>
        <!--android:icon="@drawable/ic_person_add_black_24dp"-->



    <item android:id="@+id/admission"
        android:title="@string/admission"
        android:orderInCategory="1"/>
        <!-- android:icon="@drawable/ic_search_black_24dp"-->


    <item android:id="@+id/rating"
        android:title="@string/rating"
        android:orderInCategory="1" />

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="1" />
    <!--android:icon="@drawable/ic_exit_to_app_black_24dp"-->
</menu>